ops/servicemesh/rate-limiting/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: rate-limit
  labels:
    app: rate-limit
spec:
  selector:
    app: rate-limit
  ports:
  - port: 8000
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rate-limit
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: rate-limit
    spec:
      containers:
      - name: rate-limit
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/main.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
