ops/servicemesh/rate-limiting/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rate-limit-gateway
  labels:
    app: rate-limit
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "rate-limit.frieza.local"
